# HWforSP

./: pyproject.toml
HW1m/: hw6.2.py
HW2/: hw2.2.py
HW4/: hw4.2.py
